# debt-collection-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/: caller.py  dispatch.py  improve.py  self-improve.py  tester.py
src/agents/: Customer.py  DebtCollection.py  DebtCollector.py  OutboundCaller.py  OutboundCallerTest.py
src/prompts/: customer.py  debt_collection.py
src/utils/: transcript.py
tests/: agent.py
